fixed alignment

--- a/frontend/src/components/Graph.css
+++ b/frontend/src/components/Graph.css
@@ -1,7 +1,7 @@
 .GRAPH {
-    width: 500px;
+    width: 490px;
     margin: auto;
 }
 .graphplot {
-    padding: 10px 5px;
+    padding: 10px;
 }
